--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,14 +12,14 @@
                 <p class="feed-subscribe">
                     <a href="{{ 'feed.xml' | relative_url }}">
                         <svg class="svg-icon orange" viewBox="0 1 15 15">
-                            <use xlink:href="{{ 'assets/custom-icons.svg#rss' | relative_url }}"></use>
+                            <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
                         </svg><span>Subscribe</span>
                     </a>
                 </p>
                 <ul class="contact-list">
                     {%- if site.email -%}
                     <svg class="svg-icon" viewBox="0 0 512 512">
-                        <use xlink:href="{{ 'assets/custom-icons.svg#email' | relative_url }}"></use>
+                        <path d="M467,61H45C20.218,61,0,81.196,0,106v300c0,24.72,20.128,45,45,45h422c24.72,0,45-20.128,45-45V106 C512,81.28,491.872,61,467,61z M460.786,91L256.954,294.833L51.359,91H460.786z M30,399.788V112.069l144.479,143.24L30,399.788z M51.213,421l144.57-144.57l50.657,50.222c5.864,5.814,15.327,5.795,21.167-0.046L317,277.213L460.787,421H51.213z M482,399.787 L338.213,256L482,112.212V399.787z"/>
                     </svg><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
                     {%- endif -%}
                 </ul>
