--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="footer-col-wrapper">
             <div class="footer-col footer-col-1">
-                <p><a href="https://github.com/akshob/roythletics.com">
+                <p><a href="https://github.com/akshob/royathletics.com">
                         <svg class="svg-icon" viewBox="0 1 15 15">
                             <use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use>
                         </svg>
