--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     {%- assign date_format = "%a, %b %-d, %Y" -%}
     <div class="row">
         {%- for post in site.posts -%}
-        <div class="col-sm col-xs-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 metcon-card">
             {%- if post.categories contains 'herowod' -%}
             <div class="card border-danger mb-3">
                 <div class="card-header">{{ post.date | date: date_format }}</div>
